# flood-loss-models-4-HCMC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_testing.yml  dependabot_automerge.yml  pre-commit.yml
Feature_selection/: feature_selection_classification.ipynb  feature_selection_classification.py  feature_selection_regression.ipynb  feature_selection_regression.py  feature_selection_regression_degree.py
bayesian-network/: bayesian_network_bred_hcmc.ipynb  bayesian_network_rbred.ipynb  bayesian_network_rbred_chance_degree_hcmc.ipynb  bayesian_network_rcloss.ipynb  bayesian_network_rcloss_hcmc.ipynb
bayesian_networks/: bayesian_network_bred_hcmc.ipynb  bayesian_network_rcloss_hcmc.ipynb
data-preparation/: cantho_preprocessing_exploration.ipynb  hcmc_floor_numbers.ipynb  hcmc_preprocessing_exploration.ipynb
develop/model_preprocessing/Feature_selection/: cit_feature_selection.ipynb  xgboost_feature_selection.ipynb
develop/utils/: settings.py  utils_evaluation.py  utils_feature_selection.py
explorative-data-analysis/: cantho_data_cleaning_and_HCMC_comparison.ipynb  combine_targets.ipynb  correlation_DSM_and_floors.ipynb  data_cleaing.ipynb  data_cleaning.ipynb  data_cleaning_org.ipynb  data_prep_final.R  explorative_data_analysis.ipynb  feature_selection.ipynb  spatial_autocorrelation.ipynb  utils_figures.py
explorative-data-analysis/Feature_selection/: ridge_regression_feature_selection.ipynb
feature-selection/: feature_selection_classification.py  feature_selection_regression_degree.ipynb  feature_selection_regression_degree.py  feature_selection_regression_rbred.py
main/: pyproject.toml
main/bayesian-network/: bayesian_network_bred_hcmc.ipynb  bayesian_network_rcloss_hcmc.ipynb
main/data_preprocessing/: HCMC_geolocations.ipynb
main/explorative-data-analysis/: cantho_data_cleaning_and_HCMC_comparison.ipynb
main/feature-selection/: feature_selection_classification.py
main/osm_modules/: config_tags_hcmc.json
main/reference_model/: reference_model_rf.ipynb
main/tests/: tests.py
main/utils/: evaluation.py  evaluation_utils.py  hyperparameter_sets.json  settings.py
model_preprocessing/: HCMC_geolocations.ipynb  discretization.ipynb  features_to_continous.ipynb
model_preprocessing/Feature_selection/: cit_feature_selection.ipynb  crf_feature_selection.ipynb  elastic_net_feature_selection.ipynb  entire_feature_selection.ipynb  lasso_regression_feature_selection.ipynb  logistic_regression_feature_selection.ipynb  pre_feature_reduction_transformation_expl.ipynb  preprocess_feature_reduction_expl.ipynb  ridge_regression_feature_selection.ipynb  utils_feature_selection.py  xgboost_feature_selection.ipynb
model_preprocessing/Feature_selection/models_trained/: lassoTarget_businessreduction.sav  lassoTarget_contentloss_euro.sav  lasso_Target_businessreduction.sav  lasso_Target_contentloss_euro.sav
model_preprocessing/Feature_selection_discretize/: crf_feature_selection.ipynb  logistic_regression_feature_selection.ipynb  xgboost_feature_selection.ipynb
models/: bayesian_network.ipynb  random_forest_nonspatial.ipynb  stage_damage_functions.ipynb
notebooks/: pdp-functions.ipynb
osm_modules/: config_tags_hcmc.json  download.py  ohsome_buildings.geojson  ohsome_shopsl_archive.geojson  utils.py
reference_model/: reference_model_rf.ipynb  reference_model_rf.py
src/: __init__.py  evaluation.py  evaluation_utils.py  feature_selection.py  figures.py  hyperparameter_sets.json  pipelines.py  preprocessing.py  settings.py  training.py
tests/: test_evaluation.py  test_utils.py  tests.py
utils/: __init__.py  evaluation.py  evaluation_metrics.py  evaluation_utils.py  feature_selection.py  figures.py  hyperparameter_sets.json  hyperparameter_sets.py  pipelines.py  pipelines_continous.py  pipelines_discretize.py  preprocessing.py  settings.py  training.py  utils_evaluation.py  utils_feature_selection.py  utils_figures.py  utils_processing.py  utils_training.py
utils/pipelines/: pipe_crf.pkl  pipe_en.pkl  pipe_en_bag.pkl  pipe_en_sqrt.pkl  pipe_logreg.pkl  pipe_logreg_bag.pkl  pipe_ref_model.pkl  pipe_rf.pkl  pipe_sgd.pkl  pipe_us_xgb.pkl  pipe_xgb.pkl
