[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anna Buch <anna.buch@uni-heidelberg.de>"]

[tool.poetry.dependencies]
python = "^3.12"
joblib = "^1.1.0"
ipykernel = "^6.29.5"
geopandas = "^1.0.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^3.0.0"

[tool.black]
line-length = 150
#exclude = ["versioneer.py", "visual_check.py"]
## exclude = "\.pyi?$" #extend-exclude = '''.*test_.*'''

[tool.ruff]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
]
fix = true
ignore = ["C901", "E714", "I001", "E501", "E402"]   # E501 line too long, E402 Module level import at top of file
exclude = [".venv", ".ipynb", "versioneer.py", "*_cache"]
line-length = 150  # Same as Black

[tool.ruff.lint]
fixable = ["ALL"] # default
# select = ["E4", "E7", "E9", "F"] # default: https://docs.astral.sh/ruff/configuration/
# ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
# unfixable = []

[tool.ruff.format] # default ruff config, equaivalent to Black default config
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
