[project]
name = "flood-loss-modelling"
version = "0.1.0"
description = ""
authors = [{name="Anna Buch", email="anna.buch@uni-heidelberg.de"},]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "py-banshee>=1.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "black>=23.3.0",
    "pytest>=7.4.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 150

[tool.ruff]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
]
fix = true
ignore = ["C901", "E714", "I001", "E501", "E402"]   # E501 line too long, E402 Module level import at top of file
line-length = 150  # Same as Black

[tool.ruff.lint]
fixable = ["ALL"] # default


[tool.ruff.format] # default ruff config, equaivalent to Black default config
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
