[project]
# Support Python 3.9+.
requires-python = ">=3.9"

[tool.ruff]
# Set the maximum line length.
line-length = 150
exclude = [".venv", ".json", ".ipynb"]
extend-select = ["E501"]  # Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.


## ruff check --fix pyfile  # quick fixtures
## ruff format pyfile # reformat eg to long line lengths

### TODO Implement when used with poetry
# [tool.poetry]
# name = "flood_loss_estimation"
# version = "0.1.0"
# description = ""
# authors = ["Anna Buch <a.buch@stud.uni-heidelberg.de>"]
# [tool.poetry.dependencies]
# python = "^3.9"
# geopandas = "^0.9"
# scikit-learn = "^1.0.2"
# seaborn = "^0.11.2"
# joblib = "^1.1.0"
# pickle =

# tool.poetry.dev-dependencies]
## pytest = "^6.2.5"
# unittest = 
# pre-commit = "^2.17.0"